# audit-lens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  action.yml  index.html  marketplace.json  pyproject.toml
.claude-plugin/: plugin.json
compatibility/: antigravity.md  chatgpt.md  copilot.md  gemini.md
demo/: generate_acme.py  index.html
demo/acme-corp/output/: acme_audit_report.html  acme_auditor_workspace.html  acme_grc_dashboard.html  gap_analysis.md
demo/acme-corp/policies/: access_control_policy.md  incident_response_plan.md  information_security_policy.md
demo/acme-corp/remediation/: data_retention_policy_draft.md  incident_response_plan_draft.md
skill/: SKILL.md
skill/assets/: auditor_viewer_template.html  grc_viewer_template.html
skill/references/: advanced_usecases.md  connectors.md  crosswalk.md  ecosystem_connectors.md  eu_ai_act.md  iso27001.md  iso42001.md  nist_ai_rmf.md  remediation_templates.md  soc2.md
skills/auditlens/: SKILL.md
skills/auditlens/assets/: audit_viewer_template.html
skills/auditlens/references/: connectors.md  hipaa.md
skills/auditlens/scripts/: classify_evidence.py  cli.py  draft_remediation.py  github_action_runner.py  mcp_server.py  vendor_scorer.py
skills/compliance-auditor/: SKILL.md
skills/compliance-auditor/references/: connectors.md  crosswalk.md  nist_csf.md  privacy_guardrails.md
skills/compliance-auditor/scripts/: audit_query_engine.py  classify_evidence.py  evidence_provenance.py
