[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditlens"
version = "0.1.0"
description = "The impeccable, agentic compliance engine."
readme = "README.md"
authors = [{ name = "Adhithya Rajasekaran" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pypdf>=3.0.0",
    "pandas>=2.0.0"
]

[project.scripts]
auditlens = "auditlens.cli:main"

[tool.setuptools]
package-dir = {"auditlens" = "skills/auditlens/scripts"}
packages = ["auditlens"]
